--- a/PythonDjango/sqlflaskday1/TheWall/templates/index.html
+++ b/PythonDjango/sqlflaskday1/TheWall/templates/index.html
@@ -1,6 +1,21 @@
 <html>
 <head>
   <title>Log in or Sign up</title>
+  <style>
+  input, textarea {
+      width: 200px;
+      height: 30px;
+      padding: 2px 12px;
+      margin: 0 20px;
+      font-size: 14px;
+      line-height: 1.42857143;
+      color: #555;
+      background-color: #fff;
+      background-image: none;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+  }
+  </style>
 </head>
 <body>
   <div style="color:red">
