--- a/PythonDjango/Django/Courses/apps/first_app/templates/first_app/delete.html
+++ b/PythonDjango/Django/Courses/apps/first_app/templates/first_app/delete.html
@@ -11,11 +11,11 @@
     <form class="" action="/deleteConf" method="post">
       {% csrf_token %}
       <input type="hidden" name="id" value="{{data.id}}">
-      <input type="submit" name="delete" value="Yes">
+      <input type="submit" name="" value="Yes">
     </form><br /><br />
     <form class="" action="/" method="post">
       {% csrf_token %}
-      <input type="submit" name="False" value="no">
+      <input type="submit" name="False" value="No">
     </form>
 
   </body>
